--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,19 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -61,7 +74,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.vedruna.proyectoservicios2ev/com.vedruna.proyectoservicios2ev.client.App
+                                com.vedruna.proyectoServicios2ev.client.App
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
