--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.vedruna.proyectoServicios2ev.client.App
+                                com.vedruna.proyectoServicios2ev.server.App
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
